# The_Cellular_Automata

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  The_Cellular_Automata.sln  The_Cellular_Automata.vcxproj  The_Cellular_Automata.vcxproj.filters  imgui.ini  meson.build
Catch2_Test_Project/: Catch2_Test_Project.vcxproj  Catch2_Test_Project.vcxproj.filters
Catch2_Unit_Tests/: Catch2_Unit_Tests.vcxproj  Catch2_Unit_Tests.vcxproj.filters
Release/: The_Cellular_Automata.exe.recipe  The_Cellular_Automata.vcxproj.FileListAbsolute.txt
Release/The_Cell.6a26713f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  The_Cellular_Automata.lastbuildstate  The_Cellular_Automata.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
includes/: Elementary.h  Extensions.h  GameOfLife.h
libs/imgui/: meson.build
src/: Application.cpp  Application.h  CMakeLists.txt  Elementary.cpp  Elementary.h  Extensions.h  GameOfLife.cpp  GameOfLife.h  Grid.cpp  Grid.h  Main.cpp  STL_Extensions.h  application.cpp  application.h  main.cpp
src/imgui/: CMakeLists.txt  meson.build
subprojects/: glew.wrap  glm.wrap  imgui.wrap
tests/: tests.cpp
